Update searchbar shape

--- a/index.html
+++ b/index.html
@@ -24,10 +24,27 @@
         height: 25px;
     }
 
-    #search-bar {
+    .search-bar {
+        display: flex;
+        justify-content: center;    
+        align-content: center;
         width: 500px;
+        height: 35px;
+        border: 1px solid gainsboro;
+        
+        border-radius: 20px;
+    }
+
+    .search-bar:hover {
+        box-shadow: 0 0 5px rgba(0,0,0,0.19);
+    } 
+
+    #search-bar-input {
+        width: 430px;
         height: 25px;
-        border-color: rgb(208, 219, 230);
+        border-color: transparent;
+        background-color: transparent;
+        outline: none !important;
     }
 
     #searchbar-button {
@@ -50,7 +67,8 @@
         <div id="search-container">
             <img id="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The Google logo.">
             <form id="search-form">
-                <input id="search-bar" type="text">
+                <div class="search-bar"><input id="search-bar-input" type="text"></div>
+                
                 <div id=search-buttons>
                     <button id="searchbar-button" type="submit">Google Search</button>
                     <button id="searchbar-button" type="submit">I'm Feeling Lucky</button>
