Update center search bar element
Finalized the center logo, search bar, search buttons elements, and
added svg icons.
Basic scaling is in place.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     #search-container {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 5px;
-    }
-
-    #search-form {
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 15px;
+        width: 90vw;
+        min-width: 70vw;
     }
 
     #search-buttons {
@@ -26,35 +26,53 @@
 
     .search-bar {
         display: flex;
-        justify-content: center;    
+        justify-content: center;
         align-content: center;
-        width: 500px;
-        height: 35px;
-        border: 1px solid gainsboro;
-        
-        border-radius: 20px;
-    }
+        width: 100%;
+        max-width: 550px;
 
-    .search-bar:hover {
+        padding-left: 5px;
+        padding-right: 5px;
+
+        margin-top: 30px;
+        margin-bottom: 25px;
+
+        gap: 12px;
+        height: 42px;
+        border: 1px solid #dfe1e5;
+        border-radius: 30px;
+    }
+    .search-bar:focus-within {
         box-shadow: 0 0 5px rgba(0,0,0,0.19);
     } 
 
     #search-bar-input {
-        width: 430px;
-        height: 25px;
+        width: 95%;
+        height: 90%;
+        font-size: 100%;
         border-color: transparent;
         background-color: transparent;
         outline: none !important;
     }
 
-    #searchbar-button {
+    .searchbar-button {
         width: 125px;
         height: 36px;
         margin: 5px;
+        background-color: #f8f9fa;
+        color: #5a5b5a;
         border-color:transparent;
     }
+
+    .icon-styling {
+        filter: invert(67%) sepia(12%) saturate(168%) hue-rotate(169deg) brightness(94%) contrast(82%);
+        transform: scale(0.7);
+    }
+
+
 </style>
-<html>
+
+<html lang="en">
     <head>
         <link href="reset.css" rel="stylesheet" type="text/css" media="all"/>
 
@@ -66,14 +84,16 @@
         <header></header>
         <div id="search-container">
             <img id="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The Google logo.">
-            <form id="search-form">
-                <div class="search-bar"><input id="search-bar-input" type="text"></div>
-                
-                <div id=search-buttons>
-                    <button id="searchbar-button" type="submit">Google Search</button>
-                    <button id="searchbar-button" type="submit">I'm Feeling Lucky</button>
-                </div>
-            </form>
+            <div class="search-bar">
+                <img src="search.svg" alt="" class="icon-styling">
+                <input id="search-bar-input" type="text">
+                <img src="mic.svg" alt="Search by voice icon." class="icon-styling">
+            </div>
+
+            <div id=search-buttons>
+                <button class="searchbar-button" type="button">Google Search</button>
+                <button class="searchbar-button" type="button">I'm Feeling Lucky</button>
+            </div>
         </div>
         <footer></footer>
     </body>
