--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <style>
     :root {
-        --background-gray: #f8f9fa;
+        --background-gray: #f2f2f2;
         --border-gray: #dfe1e5;
         --dark-text: #5a5b5a;
-        font-family: "arial", serif;
+        font-family: "arial", sans-serif;
+        height: 100%;
     }
 
     body {
@@ -12,19 +13,42 @@
         height: 100%;
         width: 100%;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
     }
 
     nav {
-        display: flex;
         width: 100%;
-        align-items: center;
     }
-    nav ul {
+
+    #top-nav {
         display: flex;
         align-items: center;
         margin: 10px;
+    }
+
+    #bottom-nav {
+        display: flex;
+        align-items: center;
+        background-color: var(--background-gray);
+        height: 45px;
+        border-style: solid;
+        border-top-color: var(--border-gray);
+        border-top-width: 1px;
+
+        color: var(--dark-text);
+        gap: 10px;
+        padding: 0 15px 0 15px;
+
+        justify-content: space-evenly;
+
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+    @media (max-width: 1200px) {
+        #bottom-nav {
+        }
     }
 
     .nav-item {
@@ -42,7 +66,8 @@
         flex-direction: column;
         width: 90vw;
         min-width: 70vw;
-        margin-top: 200px;
+        margin-top: 170px;
+        margin-bottom: auto;
     }
 
     #google-logo {
@@ -96,6 +121,7 @@
         margin: 5px;
         background-color: var(--background-gray);
         color: var(--dark-text);
+        border-radius: 5%;
         border-color:transparent;
     }
     .searchbar-button:hover {
@@ -132,7 +158,7 @@
     </head>
     <body>
         <nav>
-            <ul>
+            <ul id="top-nav">
                 <li class="nav-item" style="font-size: 14px">About</li>
                 <li class="nav-item" style="font-size: 14px">Store</li>
                 <li class="nav-item" style="margin-left: auto; font-size: 13px">Gmail</li>
@@ -156,6 +182,15 @@
                 <button class="searchbar-button clickable" type="button">I'm Feeling Lucky</button>
             </div>
         </div>
-        <footer></footer>
+        <nav>
+            <ul id="bottom-nav">
+                <li class="nav-item" style="font-size: 14px">Advertising</li>
+                <li class="nav-item" style="font-size: 14px">Business</li>
+                <li class="nav-item" style="font-size: 14px">How Search Works</li>
+                <li class="nav-item" style="margin-left: auto; font-size: 14px">Privacy</li>
+                <li class="nav-item" style="font-size: 14px">Terms</li>
+                <li class="nav-item" style="font-size: 14px">Settings</li>
+            </ul>
+        </nav>
     </body>
 </html>
