--- a/index.html
+++ b/index.html
@@ -150,11 +150,12 @@
 
 <html lang="en">
     <head>
+        <!--CSS Reset by Eric Meyer-->
         <link href="reset.css" rel="stylesheet" type="text/css" media="all"/>
 
         <meta charset="utf-8">
         <title>Google (Mock)</title>
-        <meta name="description" content="A nonfunctional Google mockup">
+        <meta name="description" content="A Google home page replica">
     </head>
     <body>
         <nav>
