--- a/index.html
+++ b/index.html
@@ -1,197 +1,48 @@
-<!DOCTYPE html>
-<style>
-    :root {
-        --background-gray: #f2f2f2;
-        --border-gray: #dfe1e5;
-        --dark-text: #5a5b5a;
-        font-family: "arial", sans-serif;
-        height: 100%;
-    }
-
-    body {
-        display: flex;
-        height: 100%;
-        width: 100%;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-    }
-
-    nav {
-        width: 100%;
-    }
-
-    #top-nav {
-        display: flex;
-        align-items: center;
-        margin: 10px;
-    }
-
-    #bottom-nav {
-        display: flex;
-        align-items: center;
-        background-color: var(--background-gray);
-        height: 45px;
-        border-style: solid;
-        border-top-color: var(--border-gray);
-        border-top-width: 1px;
-
-        color: var(--dark-text);
-        gap: 10px;
-        padding: 0 15px 0 15px;
-
-        justify-content: space-evenly;
-
-        flex-wrap: wrap;
-        flex-direction: row;
-    }
-
-    @media (max-width: 1200px) {
-        #bottom-nav {
-        }
-    }
-
-    .nav-item {
-        margin: 10px;
-        cursor: pointer;
-    }
-    .nav-item:hover {
-        text-decoration: underline;
-    }
-
-    #search-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 90vw;
-        min-width: 70vw;
-        margin-top: 170px;
-        margin-bottom: auto;
-    }
-
-    #google-logo {
-        width: 272px;
-    }
-
-    #search-buttons {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin: 15px;
-        width: 500px;
-        height: 25px;
-    }
-
-    .search-bar {
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        width: 100%;
-        max-width: 550px;
-
-        padding-left: 5px;
-        padding-right: 5px;
-
-        margin-top: 30px;
-        margin-bottom: 25px;
-
-        gap: 12px;
-        height: 42px;
-        border: 1px solid var(--border-gray);
-        border-radius: 30px;
-    }
-    .search-bar:focus-within {
-        box-shadow: 0 0 5px rgba(0,0,0,0.19);
-    } 
-
-    #search-bar-input {
-        width: 95%;
-        height: 90%;
-        font-size: 100%;
-        border-color: transparent;
-        background-color: transparent;
-        outline: none !important;
-    }
-
-    .searchbar-button {
-        width: 125px;
-        height: 36px;
-        margin: 5px;
-        background-color: var(--background-gray);
-        color: var(--dark-text);
-        border-radius: 5%;
-        border-color:transparent;
-    }
-    .searchbar-button:hover {
-        box-shadow: 0 0 2px rgba(0,0,0,0.4);
-    }
-
-    .icon-styling {
-        filter: invert(67%) sepia(12%) saturate(168%) hue-rotate(169deg) brightness(94%) contrast(82%);
-        transform: scale(0.6);
-    }
-
-    #apps-icon {
-        transform: scale(1.2);
-    }
-
-    #apps-icon:hover {
-        box-shadow: 0 0 0 5px rgba(0,0,0,0.2);
-        background-color: rgba(0,0,0,0.2);
-        border-radius: 50%;
-    }
-
-    .clickable {
-        cursor: pointer;
-    }
-</style>
-
+<!doctype html>
 <html lang="en">
-    <head>
-        <!--CSS Reset by Eric Meyer-->
-        <link href="reset.css" rel="stylesheet" type="text/css" media="all"/>
+<head>
+    <!--CSS Reset by Eric Meyer-->
+    <link href="styles/reset.css" rel="stylesheet" type="text/css" media="all"/>
 
-        <meta charset="utf-8">
-        <title>Google (Mock)</title>
-        <meta name="description" content="A Google home page replica">
-    </head>
-    <body>
-        <nav>
-            <ul id="top-nav">
-                <li class="nav-item" style="font-size: 14px">About</li>
-                <li class="nav-item" style="font-size: 14px">Store</li>
-                <li class="nav-item" style="margin-left: auto; font-size: 13px">Gmail</li>
-                <li class="nav-item" style="font-size: 13px">Images</li>
-                <li class="nav-item">
-                    <img src="apps.svg" alt="Apps icon." class="icon-styling" draggable="false"
-                         id="apps-icon">
-                </li>
-            </ul>
-        </nav>
-        <div id="search-container">
-            <img id="google-logo" src="logo.png" alt="The Google logo.">
-            <div class="search-bar">
-                <img src="search.svg" alt="" class="icon-styling" draggable="false">
-                <input id="search-bar-input" type="text">
-                <img src="mic.svg" alt="Search by voice icon." class="icon-styling clickable" draggable="false">
-            </div>
-
-            <div id=search-buttons>
-                <button class="searchbar-button clickable" type="button">Google Search</button>
-                <button class="searchbar-button clickable" type="button">I'm Feeling Lucky</button>
-            </div>
+    <meta charset="utf-8">
+    <title>Google (Mock)</title>
+    <meta name="description" content="A Google front page replica.">
+</head>
+<body>
+    <nav>
+        <ul id="top-nav">
+            <li class="nav-item" style="font-size: 14px">About</li>
+            <li class="nav-item" style="font-size: 14px">Store</li>
+            <li class="nav-item" style="margin-left: auto; font-size: 13px">Gmail</li>
+            <li class="nav-item" style="font-size: 13px">Images</li>
+            <li class="nav-item">
+                <img src="graphics/apps.svg" alt="Apps icon." class="icon-styling" draggable="false"
+                     id="apps-icon">
+            </li>
+        </ul>
+    </nav>
+    <div id="search-container">
+        <img id="google-logo" src="graphics/logo.png" alt="The Google logo.">
+        <div class="search-bar">
+            <img src="graphics/search.svg" alt="" class="icon-styling" draggable="false">
+            <input id="search-bar-input" type="text">
+            <img src="graphics/mic.svg" alt="Search by voice icon." class="icon-styling clickable" draggable="false">
         </div>
-        <nav>
-            <ul id="bottom-nav">
-                <li class="nav-item" style="font-size: 14px">Advertising</li>
-                <li class="nav-item" style="font-size: 14px">Business</li>
-                <li class="nav-item" style="font-size: 14px">How Search Works</li>
-                <li class="nav-item" style="margin-left: auto; font-size: 14px">Privacy</li>
-                <li class="nav-item" style="font-size: 14px">Terms</li>
-                <li class="nav-item" style="font-size: 14px">Settings</li>
-            </ul>
-        </nav>
-    </body>
+
+        <div id=search-buttons>
+            <button class="searchbar-button clickable" type="button">Google Search</button>
+            <button class="searchbar-button clickable" type="button">I'm Feeling Lucky</button>
+        </div>
+    </div>
+    <nav>
+        <ul id="bottom-nav">
+            <li class="nav-item" style="font-size: 14px">Advertising</li>
+            <li class="nav-item" style="font-size: 14px">Business</li>
+            <li class="nav-item" style="font-size: 14px">How Search Works</li>
+            <li class="nav-item" style="margin-left: auto; font-size: 14px">Privacy</li>
+            <li class="nav-item" style="font-size: 14px">Terms</li>
+            <li class="nav-item" style="font-size: 14px">Settings</li>
+        </ul>
+    </nav>
+</body>
 </html>
