--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <!--CSS Reset by Eric Meyer-->
-    <link href="styles/reset.css" rel="stylesheet" type="text/css" media="all"/>
-
+    <link href="styles/reset.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Google (Mock)</title>
     <meta name="description" content="A Google front page replica.">
